# txt2hw

./: .env.example  .pre-commit-config.yaml  .pylintrc  docker-compose.debug.yml  docker-compose.yml  manage.py  pyproject.toml
account/: api.py  apps.py  serializers.py  urls.py
api/: exception_handlers.py  mixins.py  urls.py
authentication/: apis.py  auth.py  serializers.py  services.py  urls.py
authentication/tests/apis/: test_user_login.py
characters/: admin.py  apis.py  apps.py  enums.py  filters.py  models.py  selectors.py  services.py  urls.py  utils.py
characters/migrations/: 0001_initial.py  0002_character_unique_user_value.py
characters/tests/: factories.py
characters/tests/flows/: test_direct_upload.py
common/: models.py  services.py  types.py
docker/: local.Dockerfile
integrations/aws/: client.py
requirements/: base.txt  local.txt
txt2hw/: asgi.py  env.py  settings.py  urls.py  wsgi.py
txt2hw/django/: base.py  local.py  production.py  test.py
txt2hw/settings/: auth.py  cors.py  files_and_storages.py  knox.py  sessions.py
users/: admin.py  apis.py  filters.py  models.py  selectors.py  services.py  urls.py
users/migrations/: 0001_initial.py
users/tests/services/: test_create_user.py
