[tool.poetry]
name = "txt2hw"
version = "0.1.0"
description = "A text to handwriting generator"
authors = ["Satvik Daga <dagasatvik10@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
djongo = "^1.3.6"
dnspython = "^2.2.1"
pymongo = "~3.12.3"
django-cors-headers = "^3.13.0"
django-rest-knox = "^4.2.0"
django-environ = "^0.9.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.5"
autopep8 = "^1.6.0"
pylint-django = "^2.5.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
