[tool.poetry]
name = "txt2hw"
version = "0.1.0"
description = "A text to handwriting generator"
authors = ["Satvik Daga <dagasatvik10@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
Django = "^4.0.5"
djangorestframework = "^3.13.1"
djongo = "^1.3.6"
dnspython = "^2.2.1"
pymongo = "~3.12.3"
django-cors-headers = "^3.13.0"
django-rest-knox = "^4.2.0"
django-environ = "^0.9.0"
whitenoise = "^6.2.0"
django-storages = "^1.13.2"
boto3 = "^1.26.37"
attrs = "^22.2.0"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
Faker = "^15.3.4"
ipdb = "^0.13.11"
ipython = "^8.7.0"
mypy = "^0.991"
django-stubs = "^1.13.1"
djangorestframework-stubs = "^1.8.0"
boto3-stubs = "^1.26.38"
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
# By default, `black` will ignore skip configuration when paths are explicitly provided.
# In order for `pre-commit` to respect this configuration, `force-exclude` needs to be explicitly set.
force-exclude = 'migrations'
